# LearningEffectiveDynamics

./: .gitignore  README.md  pyproject.toml
Code/Data/FHN/: 0_data_gen.py
Code/Experiments/FHN/Local/: 3_PCA_RNN.sh
Code/Methods/Codebase/Multiscale/: utils_multiscale.py
Code/Methods/Codebase/Networks/: common_plot.py  crnn.py  dimred.py  dimred_rc.py  dimred_rnn.py  dimred_sindy.py
Code/Methods/Codebase/Utils/: utils_data.py  utils_processing.py  utils_sindy.py
