[tool.poetry]
name = "learningeffectivedynamics"
version = "0.1.0"
description = ""
authors = ["pvlachas <prvlachas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = "1.11.0"
matplotlib = "3.5.2"
scipy = "1.8.1"
psutil = "5.9.1"
tqdm = "4.64.0"
tabulate = "^0.9.0"
nvidia-ml-py3 = "^7.352.0"
opencv-python = "^4.7.0.72"
adabelief-pytorch = "0.2.1"
gputil = "^1.4.0"
pysindy = "1.3.0"
cvxpy = "1.2.1"
pre-commit = "^3.2.2"
h5py = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
